[package]
name = "rocket-oauth"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth = { version = "0.4", package = "oauth1-request" }
reqwest = { version = "0.10.8", features = ["blocking"] }
dotenv = "0.15.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
